# ai-journaling-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/common/: jj-workflow.md  test-strategy.md  uv-usage.md  workflow.md
.claude/skills/daily-sync/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/refactor/: SKILL.md
.github/workflows/: ci.yml  claude-review.yml  e2e.yml
docs/: deploy.md  dev-with-coding-agent-constitution.md
docs/adr/: 0001-python-for-mvp.md  0002-line-messaging-api.md  0003-operational-architecture.md  0004-instant-response-with-agent-sdk.md  template.md
scripts/: run-checkin.sh
src/ai_journaling_agent/: main.py
src/ai_journaling_agent/adapters/cli/: repl.py
src/ai_journaling_agent/adapters/line/: bot.py  handlers.py
src/ai_journaling_agent/cli/: checkin_cmd.py  history_cmd.py  inbox_cmd.py  mood_report_cmd.py  push_cmd.py  retrospective_cmd.py  today_cmd.py
src/ai_journaling_agent/core/: ai_evaluator.py  ai_responder.py  checkin.py  classifier.py  config.py  inbox.py  journal.py  mood.py  profile_extractor.py  prompts.py  repository.py  responses.py  retrospective.py  scheduler.py  user.py  user_profile.py
tests/: conftest.py  test_ai_quality.py  test_ai_responder.py  test_checkin.py  test_classifier.py  test_config.py  test_inbox.py  test_journal.py  test_lifecycle.py  test_mood.py  test_profile_extractor.py  test_repository.py  test_responses.py  test_retrospective.py  test_scheduler.py  test_today_cmd.py  test_user.py  test_user_journey.py  test_user_profile.py  test_webhook.py
